--- a/application-test.properties
+++ b/application-test.properties
@@ -1,4 +1,4 @@
-datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
-datasource.username=root
-datasource.password=12345
-datasource.driver-class-name=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
+username=root
+password=12345
+driverClass-name=com.mysql.jdbc.Driver
