--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,8 @@
-url=jdbc:postgresql://localhost:5432/postgres
-username=postgres
-password=postgres
-driverClass=org.postgresql.Driver
+# -----------------------
+# POSTGRESQL DATABASE CONFIGURATION
+# -----------------------
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
