--- a/application-test.properties
+++ b/application-test.properties
@@ -1,4 +1,9 @@
-url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
-username=root
-password=12345
-driverClass-name=com.mysql.jdbc.Driver
+
+# ------------------------------
+# MYSQL DATABASE CONFIGURATION
+# ------------------------------
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
