--- a/application-mongodb.properties
+++ b/application-mongodb.properties
@@ -3,7 +3,7 @@
 # MongoDB DATABASE CONFIGURATION
 # ------------------------------
 
-spring.datasource.url=jdbc:mongo://localhost:27017/test
+spring.datasource.url=jdbc:mongodb://localhost:27017/test
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.datasource.driver-class-name=
